--- a/CSS-MY Site/index.html
+++ b/CSS-MY Site/index.html
@@ -17,7 +17,7 @@
         <div class="Topcontainer"> <!--Div here is acutally a container-->
             <img class="coffee_nut2" src="CSS_MySiteImages\images\coffee_nut2.png" alt="coffee_nut2" width="150px">
             <big><h1>I'm Armeen.</h1></big>
-        <h2>I am a programmer.</h2>
+        <h2>I am an aspiring programmer.</h2>
         <img class="coffee_nut1" src="CSS_MySiteImages\images\coffee_nut1.png" alt="coffee_nut1.png" width="150px">
         <img class = "coffee_img"src="CSS_MySiteImages\images\coffee-1.png" alt="coffee-.png">
         </div>
@@ -62,7 +62,7 @@
           <div class="bottom-container">
             <a class="footer-link1" href="https://www.linkedin.com/">GitHub</a>
             <a class="footer-link2" href="https://community.novasocial.club/">Nova</a>
-            <a class="footer-link3" href="https://www.appbrewery.co/">Website</a>
+            <a class="footer-link3" href="https://armeenk.github.io/Personal_Website/CSS-MY%20Site/">Website</a>
             
             <p class = "copyright">© 2022 Armeen Kaur.</p>
           </div>
