--- a/CSS-MY Site/index.html
+++ b/CSS-MY Site/index.html
@@ -52,8 +52,8 @@
             
             <div class="contact-me">
               <h2>Get In Touch</h2>
-              <h3 class = "h3-contact">Lorem ipsum dolor sit amet, non elit.</h3>
-              <p class = "p-contact">Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p><br>
+              <h3 class = "h3-contact">I am currently avaliable for collaboration work.</h3>
+              <p class = "p-contact">If you have a project I can collaborate or just fancy saying hey, then get in touch.</p><br>
               <a class="btn" href="mailto:kaurarmeen2@email.com">Contact Me</a>
             </div>
           </div>
