--- a/CSS-MY Site/index.html
+++ b/CSS-MY Site/index.html
@@ -53,7 +53,7 @@
             <div class="contact-me">
               <h2>Get In Touch</h2>
               <h3 class = "h3-contact">I am currently avaliable for collaboration work.</h3>
-              <p class = "p-contact">If you have a project I can collaborate or just fancy saying hey, then get in touch.</p><br>
+              <p class = "p-contact">If you have a project I can collaborate on or just fancy saying hey, then get in touch.</p><br>
               <a class="btn" href="mailto:kaurarmeen2@email.com">Contact Me</a>
             </div>
           </div>
